# elevator_advocate

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  LAST_PROMPT.txt  README.md  project_spec.md  render.yaml  render_build.sh
.agents/aris/: memory.md  persona.md
.agents/blythe/: persona.md
.agents/elias/: memory.md  persona.md
.agents/kiran/: persona.md
.agents/maya/: memory.md  persona.md
.agents/sol/: memory.md  persona.md
.claude/agents/: AGENTS.md  aris.md  blythe.md  elias.md  juno.md  kiran.md  maya.md
.knowledge_base/: ai_intelligence_map.md  dev_tools_map.md  django_6_0_map.md  nyc_api_map.md  react_19_map.md  registry.md
.roadmap/: README.md  handoff_2026-04-13.md  remediation_sprint_10.md
backend/: pyproject.toml
backend/buildings_app/: admin.py  ai_logic.py  apps.py  logic.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/buildings_app/fixtures/: council_districts.json
backend/buildings_app/management/commands/: backfill_council_districts.py  export_district_csv.py  refresh_building_news.py  seed_db.py  seed_pilot_buildings.py  seed_users.py  sync_soda_citywide.py  sync_soda_complaints.py
backend/buildings_app/migrations/: 0001_initial.py  0003_buildingnews.py  0005_userprofile.py  0006_advocacylog.py  0008_councildistrict.py  0012_building_management_company_building_owner_name.py
backend/buildings_app/templates/buildings_app/: data_stories.html
backend/config/: settings.py  urls.py
backend/scripts/: pre_flight.sh
backend/services/: geoclient.py  geoclient_mock.py  geosearch.py  news_search.py  nyc_council_districts.json  representatives.py  soda.py
docs/: project_journal.md
frontend/: index.html  lighthouserc.cjs  package-lock.json  package.json  vite.config.ts
(+104 files in other folders)
